Add attributes flag to GET category
